test/compile-fail/resolution/use-no-name/expected.txt
error: unresolved import `b`
 --> top.rhdl:3:7
  |
3 | use a::b;
  |        ^ no `b` in `a`
